fix alignment on home parallax, add envelop icon to social

--- a/src/scss/components/_SocialMedia.scss
+++ b/src/scss/components/_SocialMedia.scss
@@ -6,7 +6,7 @@
   &__icons {
     @include flex-row-spaceBetween;
     margin: 10px 0;
-    max-width: 30%;
+    max-width: 40%;
     a {
       color: inherit;
     }
