--- a/src/scss/pages/_Home.scss
+++ b/src/scss/pages/_Home.scss
@@ -16,7 +16,7 @@
         text-align: end;
 
         &__icons {
-          min-width: 120px;
+          min-width: 160px;
 
           margin-left: auto;
         }
